# postgresql-simple

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  CHANGES  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  cabal.haskell-ci  postgresql-simple.cabal  sdist.sh  stack.yaml
bench/: Select.hs
benchmark/: Main.hs
src/Database/PostgreSQL/: Simple.hs  Simple.hs-boot
src/Database/PostgreSQL/Simple/: Arrays.hs  BuiltinTypes.hs  Compat.hs  Copy.hs  Cursor.hs  DeriveFromRow.hs  Errors.hs  Field.hs  FromField.hs  FromField.hs-boot  FromRow.hs  FromRow.hs-boot  Geometry.hs  HStore.hs  HStoreV2.hs  Implementation.hs  Internal.hs  LargeObjects.hs  Notification.hs  Ok.hs  Param.hs  QueryParams.hs  QueryResults.hs  Range.hs  Result.hs  SRID.hs  SqlQQ.hs  Time.hs  ToField.hs  ToField.hs-boot  ToRow.hs  ToRow.hs-boot  Transaction.hs  TypeInfo.hs  Types.hs  Vector.hs
src/Database/PostgreSQL/Simple/FromRow/: Boilerplate.hs
src/Database/PostgreSQL/Simple/HStore/: Implementation.hs  Internal.hs
src/Database/PostgreSQL/Simple/HStoreV2/: Implementation.hs  Internal.hs
src/Database/PostgreSQL/Simple/Internal/: PQResultUtils.hs
src/Database/PostgreSQL/Simple/Range/: Implementation.hs  Simple.hs
src/Database/PostgreSQL/Simple/Time/: Implementation.hs  Internal.hs  Interval.hs  Parser.hs
src/Database/PostgreSQL/Simple/Time/Internal/: Parser.hs  Printer.hs
src/Database/PostgreSQL/Simple/TypeInfo/: Macro.hs  Static.hs  Types.hs
src/Database/PostgreSQL/Simple/Vector/: Unboxed.hs
test/: Bytea.hs  Common.hs  ExecuteMany.hs  Fold.hs  Inspection.hs  Main.hs  Notify.hs  Serializable.hs  Time.hs  Util.hs  WRITING-TESTS
test/results/: malformed-input.expected  unique-constraint-violation.expected
tools/: GenBuiltinTypes.hs  GenTypeInfo.hs  StringsQQ.hs
