Name:                postgresql-simple
Version:             0.5.3.0
Synopsis:            Mid-Level PostgreSQL client library
Description:
    Mid-Level PostgreSQL client library, forked from mysql-simple.
License:             BSD3
License-file:        LICENSE
Author:              Bryan O'Sullivan, Leon P Smith
Maintainer:          Leon P Smith <leon@melding-monads.com>
Copyright:           (c) 2011 MailRank, Inc.
                     (c) 2011-2015 Leon P Smith
Category:            Database
Build-type:          Simple

Cabal-version:       >= 1.9.2

extra-source-files:
     CONTRIBUTORS
     CHANGELOG.md

Library
  hs-source-dirs: src
  Exposed-modules:
     Database.PostgreSQL.Simple
     Database.PostgreSQL.Simple.Arrays
     Database.PostgreSQL.Simple.Copy
     Database.PostgreSQL.Simple.Cursor
     Database.PostgreSQL.Simple.FromField
     Database.PostgreSQL.Simple.FromRow
     Database.PostgreSQL.Simple.LargeObjects
     Database.PostgreSQL.Simple.HStore
     Database.PostgreSQL.Simple.HStore.Internal
     Database.PostgreSQL.Simple.Notification
     Database.PostgreSQL.Simple.Ok
     Database.PostgreSQL.Simple.Range
     Database.PostgreSQL.Simple.SqlQQ
     Database.PostgreSQL.Simple.Time
     Database.PostgreSQL.Simple.Time.Internal
     Database.PostgreSQL.Simple.ToField
     Database.PostgreSQL.Simple.ToRow
     Database.PostgreSQL.Simple.Transaction
     Database.PostgreSQL.Simple.TypeInfo
     Database.PostgreSQL.Simple.TypeInfo.Macro
     Database.PostgreSQL.Simple.TypeInfo.Static
     Database.PostgreSQL.Simple.Types
     Database.PostgreSQL.Simple.Errors
-- Other-modules:
     Database.PostgreSQL.Simple.Internal

  Other-modules:
     Database.PostgreSQL.Simple.Compat
     Database.PostgreSQL.Simple.HStore.Implementation
     Database.PostgreSQL.Simple.Internal.PQResultUtils
     Database.PostgreSQL.Simple.Time.Implementation
     Database.PostgreSQL.Simple.Time.Internal.Parser
     Database.PostgreSQL.Simple.Time.Internal.Printer
     Database.PostgreSQL.Simple.TypeInfo.Types

  Build-depends:
    aeson >= 0.6,
    attoparsec >= 0.10.3,
    base >= 4.6 && < 5,
    bytestring >= 0.9,
    bytestring-builder,
    case-insensitive,
    containers,
    hashable,
    postgresql-libpq >= 0.9 && < 0.10,
    template-haskell,
    text >= 0.11.1,
    time,
    transformers,
    uuid-types >= 1.0.0,
    scientific,
    vector

  if !impl(ghc >= 7.6)
    Build-depends:
      ghc-prim

  extensions: DoAndIfThenElse, OverloadedStrings, BangPatterns, ViewPatterns
              TypeOperators

  ghc-options: -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: http://github.com/lpsmith/postgresql-simple

source-repository this
  type:     git
  location: http://github.com/lpsmith/postgresql-simple
  tag:      v0.5.3.0

test-suite test
  type:           exitcode-stdio-1.0

  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Common
    Notify
    Serializable
    Time

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  extensions: NamedFieldPuns
            , OverloadedStrings
            , Rank2Types
            , RecordWildCards
            , PatternGuards
            , ScopedTypeVariables

  build-depends: base
               , aeson
               , base16-bytestring
               , bytestring
               , containers
               , cryptohash
               , filepath
               , tasty
               , tasty-hunit
               , tasty-golden
               , HUnit
               , postgresql-simple
               , text
               , time
               , vector

  if !impl(ghc >= 7.6)
    build-depends:
      ghc-prim
